TEST: attempt to fix home layout shift on scroll

--- a/src/global.css
+++ b/src/global.css
@@ -72,16 +72,6 @@
         background-color: white;
     }
 
-    .dv-screen {
-        width: 100vw;
-        width: 100dvw;
-    }
-
-    .dh-screen {
-        height: 100vh;
-        height: 100dvh;
-    }
-
     /* --- scrollbar style --- */
 
     ::-webkit-scrollbar {
